[project]
name = "ComfyUI_EmAySee_CustomNodes"
description = "Lots of nodes with useful purposes, Oobabooga interface with and w/o api key, lora analyzer, multiple math functions nodes, custom image saver, passthrus, multiple string manipulators, host pinger, and the Lora MetaData dumper via lora path (Great for that what settings and model did they use to make this lora question."
version = "3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/EmAySee/ComfyUI_EmAySee_CustomNodes"

[tool.comfy]
PublisherId = "emaysee"
DisplayName = "ComfyUI_EmAySee_CustomNodes"
Icon = ""
