[project]
name = "ComfyUI_EmAySee_CustomNodes"
description = "A Specialized suite of over 60 custom nodes for ComfyUI. Includes advanced image processing (Qwen Pixel Aligner/Optimizer), VRAM management tools, masking logic, math expression evaluators, and high-performance LLM connectors with Auto-Continue. Amongst other fun, useful, and useless nodes TBH."

version = "4.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/EmAySee/ComfyUI_EmAySee_CustomNodes"

[tool.comfy]
PublisherId = "emaysee"
DisplayName = "ComfyUI_EmAySee_CustomNodes"
Icon = ""
